--- a/kick_index.html
+++ b/kick_index.html
@@ -12,7 +12,7 @@
     <body>
       <h1>Kickstarter Data</h1>
       <h2>World History Poster Projects of Earth</h2>
-      <p>testing for github again</p>
+      <p>testing for github</p>
       <div>
         <h3>Campaign components</h3>
         <p>This experiment aims to determine whether simple components
