--- a/kick_index.html
+++ b/kick_index.html
@@ -39,7 +39,7 @@
           <li>Number of images in PD? </li>
         </ol>
       </div>
-      <div id="data-zone3" data-url= "http://www.kickstarter.com/projects/usefulcharts/timeline-of-world-history-poster-projects-of-earth/stats.json?v=1"></div>
+      <div id="data-zone3"></div>
       <div id="data-zone4"></div>
       <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
