Generalising Ajax request, currently successful

--- a/kick_index.html
+++ b/kick_index.html
@@ -26,7 +26,7 @@
           <li>Number of images in PD? 5</li>
         </ol>
       </div>
-      <div id='data-zone1'></div>
+      <div id='data-zone1' data-url = 'http://www.kickstarter.com/projects/usefulcharts/timeline-of-world-history-poster-projects-of-earth/stats.json?v=1'></div>
       <div id='data-zone2'></div>
 
       <h2>Sun Spots a Print Portfolio</h2>
