Created function for kickstarter data, history and sun spots set up and working

--- a/kick_index.html
+++ b/kick_index.html
@@ -39,7 +39,7 @@
           <li>Number of images in PD? </li>
         </ol>
       </div>
-      <div id="data-zone3"></div>
+      <div id="data-zone3" data-url = 'https://www.kickstarter.com/projects/1421716661/sun-spots-a-print-portfolio/stats.json?v=1'></div>
       <div id="data-zone4"></div>
       <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
