6 Kickstarter Projects Added with new function

--- a/kick_index.html
+++ b/kick_index.html
@@ -6,12 +6,10 @@
         <link href="kick_styles.css" type="text/css" rel="stylesheet">
         <script src="jquery-3.2.1.min.js"></script>
         <script src="kick_scripts.js" type="text/javascript"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/modules/exporting.js"></script>
     </head>
     <body>
       <h1>Kickstarter Data</h1>
-      <h2>World History Poster Projects of Earth</h2>
+      <h2>Project 1: World History Poster Projects of Earth</h2>
       <p>testing for github again</p>
       <div>
         <h3>Campaign components</h3>
@@ -29,20 +27,54 @@
       <div id='data-zone1' data-url = 'http://www.kickstarter.com/projects/usefulcharts/timeline-of-world-history-poster-projects-of-earth/stats.json?v=1'></div>
       <div id='data-zone2'></div>
 
-      <h2>Sun Spots a Print Portfolio</h2>
+      <h2>Project 2: Sun Spots a Print Portfolio</h2>
       <div>
         <h3>Campaign components</h3>
         <ol>
-          <li>Video? </li>
-          <li>Video Length? </li>
-          <li>Word count of PD? </li>
-          <li>Number of images in PD? </li>
+          <li>List here </li>
         </ol>
       </div>
       <div id="data-zone3" data-url = 'https://www.kickstarter.com/projects/1421716661/sun-spots-a-print-portfolio/stats.json?v=1'></div>
       <div id="data-zone4"></div>
-      <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
+      <h2>Project 3: Orrery Lamp</h2>
+      <div>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+      </div>
+      <div id="data-zone5" data-url = 'https://www.kickstarter.com/projects/537191705/orrery-lamp-a-minimal-dimmable-solar-system/stats.json?v=1'></div>
+      <div id="data-zone6"></div>
 
-    </body>
+      <h2>Project 4: Apricoat</h2>
+      <div>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+      </div>
+      <div id="data-zone7" data-url = 'https://www.kickstarter.com/projects/2116152785/apricoat-a-zero-compromise-jacket-for-adventurers/stats.json?v=1'></div>
+      <div id="data-zone8"></div>
+
+      <h2>Project 5: Nise Wave</h2>
+      <div>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+      </div>
+      <div id="data-zone9" data-url = 'https://www.kickstarter.com/projects/nise/nise-wave-wifi-sous-vide-with-adaptive-temperature/stats.json?v=1'></div>
+      <div id="data-zone10"></div>
+
+      <h2>Project 6: Wooden Word Watch</h2>
+      <div>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+      </div>
+      <div id="data-zone11" data-url = 'https://www.kickstarter.com/projects/182337072/wooden-word-watch/stats.json?v=1'></div>
+      <div id="data-zone12"></div>
+
 </html>
