New pages added and links set up with nav bar

--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -14,10 +14,10 @@
 
 <body>
   <ul class="nav nav-tabs">
-    <li> <a href='crowd_index.html'>Home</a></li>
-    <li class="active"><a href='crowd_kick.html'>Kickstarter Data</a></li>
-    <li><a href="#">IndieGoGo Data</a></li>
-    <li><a href="#">Crowdfunder UK Data</a></li>
+    <li><a href='crowd_index.html'>Home</a></li>
+    <li class = "active"><a href='crowd_kick.html'>Kickstarter Data</a></li>
+    <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
+    <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
   </ul>
 <h1>Kickstarter Data</h1>
 <h2>Project 1: World History Poster Projects of Earth</h2>
