end of day commit

--- a/crowd_indiegogo.html
+++ b/crowd_indiegogo.html
@@ -13,12 +13,30 @@
 </head>
 
 <body>
-  <ul class="nav nav-tabs">
-    <li><a href='crowd_index.html'>Home</a></li>
-    <li><a href='crowd_kick.html'>Kickstarter Data</a></li>
-    <li class = "active"><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
-    <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
-  </ul>
+  <div class="container-fluid">
+    <ul class="nav nav-tabs">
+      <li><a href='crowd_index.html'>Home</a></li>
+      <li><a href='crowd_kick.html'>Kickstarter Data</a></li>
+      <li class="active"><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
+      <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
+    </ul>
+  </div>
+  <div class="container-fluid">
+    <h1>IndieGoGo Data</h1>
+    <h2>Project 1</h2>
+    <div>
+      <h3>Campaign components</h3>
+      <p>This experiment aims to determine whether simple components of the campaign e.g. video length can influence the success. From this data collection, guidelines will be formed that, while dismissing complex aspects of the campaign, increases the success
+        of the campaign based on this data. </p>
+      <ol>
+        <li>Video? N</li>
+        <li>Video Length? N/A</li>
+        <li>Word count of PD? 500+</li>
+        <li>Number of images in PD? 5</li>
+      </ol>
+    </div>
+  </div>
+
 </body>
 
 </html>
