--- a/crowd_index.html
+++ b/crowd_index.html
@@ -13,12 +13,19 @@
 </head>
 
 <body>
-  <ul class="nav nav-tabs">
-    <li class = "active"><a href='crowd_index.html'>Home</a></li>
-    <li><a href='crowd_kick.html'>Kickstarter Data</a></li>
-    <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
-    <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
-  </ul>
+  <div class="container-fluid">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href='crowd_index.html'>Home</a></li>
+      <li><a href='crowd_kick.html'>Kickstarter Data</a></li>
+      <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
+      <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
+    </ul>
+  </div>
+
+  <div class="container-fluid">
+    <h1>Welcome to my Crowdfunding Data Collection zone</h1>
+  </div>
+
 </body>
 
 </html>
