--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -13,77 +13,102 @@
 </head>
 
 <body>
-  <ul class="nav nav-tabs">
-    <li><a href='crowd_index.html'>Home</a></li>
-    <li class = "active"><a href='crowd_kick.html'>Kickstarter Data</a></li>
-    <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
-    <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
-  </ul>
-<h1>Kickstarter Data</h1>
-<h2>Project 1: World History Poster Projects of Earth</h2>
-<div>
-  <h3>Campaign components</h3>
-  <p>This experiment aims to determine whether simple components of the campaign e.g. video length can influence the success. From this data collection, guidelines will be formed that, while dismissing complex aspects of the campaign, increases the success
-    of the campaign based on this data. </p>
-  <ol>
-    <li>Video? N</li>
-    <li>Video Length? N/A</li>
-    <li>Word count of PD? 500+</li>
-    <li>Number of images in PD? 5</li>
-  </ol>
-</div>
-<div id='data-zone1' data-url='http://www.kickstarter.com/projects/usefulcharts/timeline-of-world-history-poster-projects-of-earth/stats.json?v=1'></div>
-<div id='data-zone2'></div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <ul class="nav nav-tabs">
+          <li><a href='crowd_index.html'>Home</a></li>
+          <li class="active"><a href='crowd_kick.html'>Kickstarter Data</a></li>
+          <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
+          <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-<h2>Project 2: Sun Spots a Print Portfolio</h2>
-<div>
-  <h3>Campaign components</h3>
-  <ol>
-    <li>List here </li>
-  </ol>
-</div>
-<div id="data-zone3" data-url='https://www.kickstarter.com/projects/1421716661/sun-spots-a-print-portfolio/stats.json?v=1'></div>
-<div id="data-zone4"></div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Kickstarter Data</h1>
+        <h2>Project 1: World History Poster Projects of Earth</h2>
+        <h3>Campaign components</h3>
+        <p>This experiment aims to determine whether simple components of the campaign e.g. video length can influence the success. From this data collection, guidelines will be formed that, while dismissing complex aspects of the campaign, increases the
+          success of the campaign based on this data. </p>
+        <ol>
+          <li>Video? N</li>
+          <li>Video Length? N/A</li>
+          <li>Word count of PD? 500+</li>
+          <li>Number of images in PD? 5</li>
+        </ol>
+        <div id='data-zone1' data-url='http://www.kickstarter.com/projects/usefulcharts/timeline-of-world-history-poster-projects-of-earth/stats.json?v=1'></div>
+        <div id='data-zone2'></div>
+      </div>
+    </div>
 
-<h2>Project 3: Orrery Lamp</h2>
-<div>
-  <h3>Campaign components</h3>
-  <ol>
-    <li>List here </li>
-  </ol>
-</div>
-<div id="data-zone5" data-url='https://www.kickstarter.com/projects/537191705/orrery-lamp-a-minimal-dimmable-solar-system/stats.json?v=1'></div>
-<div id="data-zone6"></div>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Project 2: Sun Spots a Print Portfolio</h2>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+        <div id="data-zone3" data-url='https://www.kickstarter.com/projects/1421716661/sun-spots-a-print-portfolio/stats.json?v=1'></div>
+        <div id="data-zone4"></div>
+      </div>
+    </div>
 
-<h2>Project 4: Apricoat</h2>
-<div>
-  <h3>Campaign components</h3>
-  <ol>
-    <li>List here </li>
-  </ol>
-</div>
-<div id="data-zone7" data-url='https://www.kickstarter.com/projects/2116152785/apricoat-a-zero-compromise-jacket-for-adventurers/stats.json?v=1'></div>
-<div id="data-zone8"></div>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Project 3: Orrery Lamp</h2>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+        <div id="data-zone5" data-url='https://www.kickstarter.com/projects/537191705/orrery-lamp-a-minimal-dimmable-solar-system/stats.json?v=1'></div>
+        <div id="data-zone6"></div>
+      </div>
+    </div>
 
-<h2>Project 5: Nise Wave</h2>
-<div>
-  <h3>Campaign components</h3>
-  <ol>
-    <li>List here </li>
-  </ol>
-</div>
-<div id="data-zone9" data-url='https://www.kickstarter.com/projects/nise/nise-wave-wifi-sous-vide-with-adaptive-temperature/stats.json?v=1'></div>
-<div id="data-zone10"></div>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Project 4: Apricoat</h2>
+        <h3>Campaign components</h3>
+        <ol>
+          <li>List here </li>
+        </ol>
+        <div id="data-zone7" data-url='https://www.kickstarter.com/projects/2116152785/apricoat-a-zero-compromise-jacket-for-adventurers/stats.json?v=1'></div>
+        <div id="data-zone8"></div>
+      </div>
+    </div>
 
-<h2>Project 6: Wooden Word Watch</h2>
-<div>
-  <h3>Campaign components</h3>
-  <ol>
-    <li>List here </li>
-  </ol>
-</div>
-<div id="data-zone11" data-url='https://www.kickstarter.com/projects/182337072/wooden-word-watch/stats.json?v=1'></div>
-<div id="data-zone12"></div>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Project 5: Nise Wave</h2>
+        <div>
+          <h3>Campaign components</h3>
+          <ol>
+            <li>List here </li>
+          </ol>
+        </div>
+        <div id="data-zone9" data-url='https://www.kickstarter.com/projects/nise/nise-wave-wifi-sous-vide-with-adaptive-temperature/stats.json?v=1'></div>
+        <div id="data-zone10"></div>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Project 6: Wooden Word Watch</h2>
+        <div>
+          <h3>Campaign components</h3>
+          <ol>
+            <li>List here </li>
+          </ol>
+        </div>
+        <div id="data-zone11" data-url='https://www.kickstarter.com/projects/182337072/wooden-word-watch/stats.json?v=1'></div>
+        <div id="data-zone12"></div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
