Condensing URL for reusability

--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -40,7 +40,7 @@
           <li>Word count of PD? 500+</li>
           <li>Number of images in PD? 5</li>
         </ol>
-        <div id='data-zone1' data-url='http://www.kickstarter.com/projects/usefulcharts/timeline-of-world-history-poster-projects-of-earth/stats.json?v=1'></div>
+        <div id='data-zone1'></div>
         <div id='data-zone2'></div>
       </div>
     </div>
