Added 4 projects with condensed URL, html doc working

--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -29,7 +29,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <h4 id=>Project 1</h4>
+        <h4 id="data-zoneA"></h4>
         <div id="data-zone1"></div>
         <div id="data-zone2"></div>
       </div>
@@ -37,7 +37,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id=>Project 2</h4>
+        <h4 id="data-zoneB"></h4>
         <div id="data-zone3"></div>
         <div id="data-zone4"></div>
       </div>
@@ -45,7 +45,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id=>Project 3</h4>
+        <h4 id="data-zoneC"></h4>
         <div id="data-zone5"></div>
         <div id="data-zone6"></div>
       </div>
@@ -53,25 +53,9 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id=>Project 4</h4>
+        <h4 id="data-zoneD"></h4>
         <div id="data-zone7"></div>
         <div id="data-zone8"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <h4 id=>Project 5</h4>
-        <div id="data-zone9"></div>
-        <div id="data-zone10"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <h4>Project 6</h4>
-        <div id="data-zone11"></div>
-        <div id="data-zone12"></div>
       </div>
     </div>
   </div>
