Refactor of code, data pulled from array

--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -29,33 +29,33 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <h4 id="data-zoneA"></h4>
+        <h4 id="data-zoneA">Project 1</h4>
+        <div id="data-zone0"></div>
+        <div id="data-zone0A"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h4 id="data-zoneB">Project 2</h4>
         <div id="data-zone1"></div>
+        <div id="data-zone1A"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h4 id="data-zoneC">Project 3</h4>
         <div id="data-zone2"></div>
+        <div id="data-zone2A"></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id="data-zoneB"></h4>
+        <h4 id="data-zoneD">Project 4</h4>
         <div id="data-zone3"></div>
-        <div id="data-zone4"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <h4 id="data-zoneC"></h4>
-        <div id="data-zone5"></div>
-        <div id="data-zone6"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <h4 id="data-zoneD"></h4>
-        <div id="data-zone7"></div>
-        <div id="data-zone8"></div>
+        <div id="data-zone3A"></div>
       </div>
     </div>
   </div>
