Div inserts on HTML updated to be more reusable

--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -29,33 +29,33 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <h4 id="data-zoneA">Project 1</h4>
-        <div id="data-zone0"></div>
+        <h4 id="data-zone0">Project 1</h4>
         <div id="data-zone0A"></div>
+        <div id="data-zone0B"></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id="data-zoneB">Project 2</h4>
-        <div id="data-zone1"></div>
+        <h4 id="data-zone1">Project 2</h4>
         <div id="data-zone1A"></div>
+        <div id="data-zone1B"></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id="data-zoneC">Project 3</h4>
-        <div id="data-zone2"></div>
+        <h4 id="data-zone2">Project 3</h4>
         <div id="data-zone2A"></div>
+        <div id="data-zone2B"></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        <h4 id="data-zoneD">Project 4</h4>
-        <div id="data-zone3"></div>
+        <h4 id="data-zone3">Project 4</h4>
         <div id="data-zone3A"></div>
+        <div id="data-zone3B"></div>
       </div>
     </div>
   </div>
