Commented out links to indiegogo and crowdfunder pages since they do not exist, kept as reference of how tab links can be used

--- a/crowd_index.html
+++ b/crowd_index.html
@@ -17,8 +17,8 @@
     <ul class="nav nav-tabs">
       <li class="active"><a href='crowd_index.html'>Home</a></li>
       <li><a href='crowd_kick.html'>Kickstarter Data</a></li>
-      <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
-      <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
+      <!-- <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li> -->
+      <!-- <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li> -->
     </ul>
   </div>
 
