--- a/crowd_kick.html
+++ b/crowd_kick.html
@@ -19,8 +19,8 @@
         <ul class="nav nav-tabs">
           <li><a href='crowd_index.html'>Home</a></li>
           <li class="active"><a href='crowd_kick.html'>Kickstarter Data</a></li>
-          <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li>
-          <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li>
+          <!-- <li><a href="crowd_indiegogo.html">IndieGoGo Data</a></li> -->
+          <!-- <li><a href="crowd_crowdfunder.html">Crowdfunder UK Data</a></li> -->
         </ul>
       </div>
     </div>
